test_api.py funcional
